--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,26 +1,65 @@
+<%= render "shared/second-header"%>
 <h1><%= t('.sign_up') %></h1>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
   <%= bootstrap_devise_error_messages! %>
 
   <div class="form-group">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
-  </div>
+    <div class='form-text-wrap'>
+      <label class="form-text">お名前</label>
+      <span class="indispensable">必須</span>
+    </div><%# /form-text-wrap %>
+    <%= f.text_area :name, class:"form-control", id:"name", placeholder:"例) 仕事トゥギャ雄", maxlength:"40" %>
+  </div><%# /form-group %>
 
   <div class="form-group">
-    <%= f.label :password %>
-    <%= f.password_field :password, autocomplete: 'current-password', class: 'form-control' %>
-
-    <% if @minimum_password_length %>
-      <small class="form-text text-muted"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></small>
-    <% end %>
-  </div>
+    <div class='form-text-wrap'>
+    <label class="form-text">メールアドレス</label>
+      <span class="indispensable">必須</span>
+    </div><%# /form-text-wrap %>
+    <%= f.email_field :email, class: 'form-control', id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true, autocomplete: 'email' %>
+  </div><%# /form-group %>
 
   <div class="form-group">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, autocomplete: 'current-password', class: 'form-control' %>
-  </div>
+    <div class='form-text-wrap'>
+      <label class="form-text">パスワード</label>
+      <span class="indispensable">必須</span>
+    </div><%# /form-text-wrap %>
+    <%= f.password_field :password, class: 'form-control', id:"password", placeholder:"6文字以上の半角英数字" %>
+    <p class='info-text'>※英字と数字の両方を含めて設定してください</p>
+  </div><%# /form-group %>
+
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">パスワード(確認)</label>
+      <span class="indispensable">必須</span>
+    </div><%# /form-text-wrap %>
+    <%= f.password_field :password_confirmation, class: 'form-control', id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
+  </div><%# /form-group %>
+
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">所属企業名</label>
+      <span class="indispensable">必須</span>
+    </div><%# /form-text-wrap %>
+    <%= f.text_area :company, class:"form-control", id:"company", placeholder:"例) 株式会社WORK TOGETHER", maxlength:"40" %>
+  </div><%# /form-group %>
+
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">職種</label>
+      <span class="indispensable">必須</span>
+    </div><%# /form-text-wrap %>
+    <%= f.text_area :occupation, class:"form-control", id:"occupation", placeholder:"例) 製版/印刷", maxlength:"250" %>
+  </div><%# /form-group %>
+
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">役職</label>
+      <span class="indispensable">必須</span>
+    </div><%# /form-text-wrap %>
+    <%= f.text_area :position, class:"form-control", id:"position", placeholder:"例) 第二営業部一課課長", maxlength:"40" %>
+  </div><%# /form-group %>
 
   <div class="form-group">
     <%= f.submit t('.sign_up'), class: 'btn btn-primary btn-block' %>
