--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
   */
 
  @import "bootstrap/scss/bootstrap";
+ @import "shared/second-header.scss";
  @import "companies.scss";
  @import "reset.css";
  @import "bootswatch/united/variables";
