--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,25 +1,27 @@
-<%# CSS・・・assets/stylesheets/shared/header.css %>
+<%# CSS・・・assets/stylesheets/shared/header.scss %>
 <header class='top-page-header'>
-  <div class='main-bar-contents'>
-    <%= link_to image_tag("logo_bg.png", class:"wt-icon"), "/" %>
-  </div>
-  <div class='nav'>
-    <ul class='lists'>
-      <% if user_signed_in? %>
-        <li><%= link_to "#{current_user.nickname}さん", edit_user_registration_path, class: "name" %></li>
-        <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
-      <% else %>
-        <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
-        <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
-      <% end %>
-    </ul>
-  </div>
-  <div class='search-bar-contents'>
-    <form class="search-form" action="#">
-      <input class='input-box' placeholder='キーワードから探す'>
-      <button class="search-button">
-        <%= image_tag "search.png", class:"search-icon" %>
-      </button>
-    </form>
-  </div>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container">
+      <%= link_to image_tag("logo_bg.png", class:"wt-icon"), "/" %>
+      <div class='nav'>
+        <ul class='lists'>
+          <% if user_signed_in? %>
+            <li><%= link_to "#{current_user.name}さん", edit_user_registration_path, class: "name" %></li>
+            <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
+          <% else %>
+            <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
+            <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
+          <% end %>
+        </ul>
+      </div>
+      <div class='search-bar-contents'>
+       <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="キーワードから探す" aria-label="Search">
+          <button class="btn btn-outline-warning">
+            <%= image_tag "search.png", class:"search-icon" %>
+          </button>
+        </form>
+      </div>
+    </div>
+  </nav>
 </header>
