--- a/app/views/shared/_second-header.html.erb
+++ b/app/views/shared/_second-header.html.erb
@@ -1,3 +1,13 @@
 <header class='second-header'>
-  <%= link_to image_tag("logo_bg.png", class:"second-logo"), "/" %>
+  <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container">
+        <%= link_to image_tag("logo_bg.png", class:"wt-icon"), root_path, class: "navbar__brand navbar__mainLogo" %>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="キーワードから探す" aria-label="Search">
+          <button class="btn btn-outline-warning">
+            <%= image_tag "search.png", class:"search-icon" %>
+          </button>
+        </form>
+      </div>
+    </nav>
 </header>
