--- a/app/assets/stylesheets/shared/header.scss
+++ b/app/assets/stylesheets/shared/header.scss
@@ -1,77 +1,31 @@
-* {
-  box-sizing: border-box;
+.wt-icon {
+  width: 10vw;
+  margin-right: 10vw;
 }
 
-.top-page-header {
-  width: 100vw;
+.navbar {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
 }
 
-.container {
+#Navber {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.wt-icon {
-  width: 20vw;
-  margin-right: 10vw;
+.d-flex {
+  margin: 0 0 5px 5px;
 }
 
-.btn {
-  width: 5vh;
+.search-button {
+  width: 10vh;
   border: 0;
   cursor: pointer;
+  background-color: #ec782b;
   padding: 8px;
 }
 
 .search-icon {
   width: 100%;
-}
-
-.navbar {
-  background-color: #ec782b;
-  border-bottom: 1px solid rgba(0, 0, 0, .0975);
-  height: 77px;
-}
-
-.nav {
-  font-size: 18px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 1vh 0;
-}
-
-.lists {
-  display: flex;
-  list-style: none;
-  align-items: flex-end;
-}
-
-
-.name {
-  text-decoration: none;
-  margin-right: 3vw;
-  color: #fff;
-  font-weight: bold;
-}
-
-
-.logout {
-  text-decoration: none;
-  color: #fff;
-}
-
-.login {
-  text-decoration: none;
-  line-height: 32px;
-  margin-right: 3vw;
-  color: #fff;
-}
-
-.sign-up {
-  text-decoration: none;
-  color: #fff;
 }
