--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,69 +1,69 @@
-<%= render "shared/second-header"%>
-<h1><%= t('.sign_up') %></h1>
+<%= render "shared/header" %>
+<div class="container-login">
+  <h1><%= t('.sign_up') %></h1>
+  <%= render 'shared/flash_messages' %>
 
-<%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
-  <%= bootstrap_devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= bootstrap_devise_error_messages! %>
 
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">お名前</label>
+    <div class='form-group'>
+      <div class='form-text-wrap'>
+        <label class="form-text">お名前</label>
+        <span class="indispensable">必須</span>
+      </div>
+      <%= f.text_area :name, class:"form-control input-default", id:"name", placeholder:"例) 仕事トゥギャ雄", maxlength:"40" %>
+    </div>
+
+    <div class="form-group">
+      <label class="form-text">メールアドレス</label>
       <span class="indispensable">必須</span>
-    </div><%# /form-text-wrap %>
-    <%= f.text_area :name, class:"form-control", id:"name", placeholder:"例) 仕事トゥギャ雄", maxlength:"40" %>
-  </div><%# /form-group %>
+      <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control', placeholder:"例) PC・携帯どちらでも可" %>
+    </div>
 
-  <div class="form-group">
-    <div class='form-text-wrap'>
-    <label class="form-text">メールアドレス</label>
-      <span class="indispensable">必須</span>
-    </div><%# /form-text-wrap %>
-    <%= f.email_field :email, class: 'form-control', id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true, autocomplete: 'email' %>
-  </div><%# /form-group %>
-
-  <div class="form-group">
-    <div class='form-text-wrap'>
+    <div class="form-group">
       <label class="form-text">パスワード</label>
       <span class="indispensable">必須</span>
-    </div><%# /form-text-wrap %>
-    <%= f.password_field :password, class: 'form-control', id:"password", placeholder:"6文字以上の半角英数字" %>
-    <p class='info-text'>※英字と数字の両方を含めて設定してください</p>
-  </div><%# /form-group %>
+      <%= f.password_field :password, class: 'form-control', placeholder:"例) 6文字以上の半角英数字" %>
 
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">パスワード(確認)</label>
+      <% if @minimum_password_length %>
+        <small class="form-text text-muted"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></small>
+      <% end %>
+    </div>
+
+    <div class="form-group">
+      <label class="form-text">パスワード(確認用)</label>
       <span class="indispensable">必須</span>
-    </div><%# /form-text-wrap %>
-    <%= f.password_field :password_confirmation, class: 'form-control', id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
-  </div><%# /form-group %>
+      <%= f.password_field :password_confirmation, class: 'form-control', placeholder:"例) 同じパスワードを入力してください" %>
+    </div>
 
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">所属企業名</label>
-      <span class="indispensable">必須</span>
-    </div><%# /form-text-wrap %>
-    <%= f.text_area :company, class:"form-control", id:"company", placeholder:"例) 株式会社WORK TOGETHER", maxlength:"40" %>
-  </div><%# /form-group %>
+    <div class='form-group'>
+      <div class='form-text-wrap'>
+        <label class="form-text">会社名</label>
+        <span class="indispensable">必須</span>
+      </div>
+      <%= f.text_area :company, class:"form-control input-default", id:"company", placeholder:"例) 株式会社WORK TOGETHER", maxlength:"40" %>
+    </div>
 
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">職種</label>
-      <span class="indispensable">必須</span>
-    </div><%# /form-text-wrap %>
-    <%= f.text_area :occupation, class:"form-control", id:"occupation", placeholder:"例) 製版/印刷", maxlength:"250" %>
-  </div><%# /form-group %>
+    <div class='form-group'>
+      <div class='form-text-wrap'>
+        <label class="form-text">職業</label>
+        <span class="indispensable">必須</span>
+      </div>
+      <%= f.text_area :occupation, class:"form-control input-default", id:"occupation", placeholder:"例) 営業職", maxlength:"100" %>
+    </div>
 
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">役職</label>
-      <span class="indispensable">必須</span>
-    </div><%# /form-text-wrap %>
-    <%= f.text_area :position, class:"form-control", id:"position", placeholder:"例) 第二営業部一課課長", maxlength:"40" %>
-  </div><%# /form-group %>
+    <div class='form-group'>
+      <div class='form-text-wrap'>
+        <label class="form-text">役職</label>
+        <span class="indispensable">必須</span>
+      </div>
+      <%= f.text_area :position, class:"form-control input-default", id:"position", placeholder:"例) 〇〇課リーダー", maxlength:"100" %>
+    </div>
 
-  <div class="form-group">
-    <%= f.submit t('.sign_up'), class: 'btn btn-primary btn-block' %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <%= f.submit t('.sign_up'), class: 'btn btn-primary btn-block' %>
+    </div>
+  <% end %>
 
-<%= render 'devise/shared/links' %>
+  <%= render 'devise/shared/links' %>
+</div>
