--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,27 +1,31 @@
 <%# CSS・・・assets/stylesheets/shared/header.scss %>
-<header class='top-page-header'>
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container">
-      <%= link_to image_tag("logo_bg.png", class:"wt-icon"), "/" %>
-      <div class='nav'>
-        <ul class='lists'>
-          <% if user_signed_in? %>
-            <li><%= link_to "#{current_user.name}さん", edit_user_registration_path, class: "name" %></li>
-            <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
-          <% else %>
-            <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
-            <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
-          <% end %>
-        </ul>
-      </div>
-      <div class='search-bar-contents'>
-       <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="キーワードから探す" aria-label="Search">
-          <button class="btn btn-outline-warning">
-            <%= image_tag "search.png", class:"search-icon" %>
-          </button>
-        </form>
-      </div>
+<header>
+  <nav class="navbar navbar-expand navbar-dark" style="background-color: #ec782b;">
+    <%= link_to image_tag("logo_bg.png", class: "wt-icon"), root_path, class: 'navbar-brand' %>
+    <div id="Navber">
+      <ul class="navbar-nav">
+        <% if user_signed_in? %>
+          <li class="nav-item active">
+            <%= link_to "#{current_user.nickname}さん", edit_user_registration_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item active">
+            <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+          </li>
+      <% else %>
+          <li class="nav-item active">
+            <%= link_to "新規登録", new_user_registration_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item active">
+            <%= link_to "ログイン", new_user_session_path, class: 'nav-link' %>
+          </li>
+        <% end %>
+      </ul>
+      <form class="d-flex" action="#">
+        <input class='form-control me-2' placeholder='キーワードから探す'>
+        <button class="search-button">
+          <%= image_tag "search.png", class:"search-icon" %>
+        </button>
+      </form>
     </div>
   </nav>
 </header>
