second-header.html.erb修正

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/header" %>
+<%= render "shared/second-header" %>
 <div class="container-login">
   <h1><%= t('.sign_up') %></h1>
   <%= render 'shared/flash_messages' %>
