--- a/app/views/shared/_second-header.html.erb
+++ b/app/views/shared/_second-header.html.erb
@@ -1,13 +1,14 @@
-<header class='second-header'>
-  <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container">
-        <%= link_to image_tag("logo_bg.png", class:"wt-icon"), root_path, class: "navbar__brand navbar__mainLogo" %>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="キーワードから探す" aria-label="Search">
-          <button class="btn btn-outline-warning">
-            <%= image_tag "search.png", class:"search-icon" %>
-          </button>
-        </form>
-      </div>
-    </nav>
+<%# CSS・・・assets/stylesheets/shared/header.scss %>
+<header>
+  <nav class="navbar navbar-expand navbar-dark" style="background-color: #ec782b;">
+    <%= link_to image_tag("logo_bg.png", class: "wt-icon"), root_path, class: 'navbar-brand' %>
+    <div id="Navber">
+      <form class="d-flex" action="#">
+        <input class='form-control me-2' placeholder='キーワードから探す'>
+        <button class="search-button">
+          <%= image_tag "search.png", class:"search-icon" %>
+        </button>
+      </form>
+    </div>
+  </nav>
 </header>
