--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,20 +6,27 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= bootstrap_devise_error_messages! %>
 
+    <div class='form-group'>
+      <div class='form-text-wrap'>
+        <label class="form-text">お名前</label>
+      </div>
+      <%= f.text_area :name, class:"form-control input-default", id:"name", placeholder:"例) 仕事トゥギャ雄", maxlength:"40" %>
+    </div>
+
     <div class="form-group">
-      <%= f.label :email %>
+      <label class="form-text">メールアドレス</label>
       <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
     </div>
 
     <div class="form-group">
-      <%= f.label :password %>
+      <label class="form-text">パスワード</label>
       <%= f.password_field :password, autocomplete: 'new-password', class: 'form-control' %>
 
       <small class="form-text text-muted"><%= t('.leave_blank_if_you_don_t_want_to_change_it') %></small>
     </div>
 
     <div class="form-group">
-      <%= f.label :password_confirmation %>
+      <label class="form-text">パスワード(確認用)</label>
       <%= f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control'  %>
     </div>
 
@@ -28,6 +35,27 @@
       <%= f.password_field :current_password, autocomplete: 'current-password', class: 'form-control' %>
 
       <small class="form-text text-muted"><%= t('.we_need_your_current_password_to_confirm_your_changes') %></small>
+    </div>
+
+    <div class='form-group'>
+      <div class='form-text-wrap'>
+        <label class="form-text">会社名</label>
+      </div>
+      <%= f.text_area :company, class:"form-control input-default", id:"company", placeholder:"例) 株式会社WORK TOGETHER", maxlength:"40" %>
+    </div>
+
+    <div class='form-group'>
+      <div class='form-text-wrap'>
+        <label class="form-text">職業</label>
+      </div>
+      <%= f.text_area :occupation, class:"form-control input-default", id:"occupation", placeholder:"例) 営業職", maxlength:"100" %>
+    </div>
+
+    <div class='form-group'>
+      <div class='form-text-wrap'>
+        <label class="form-text">役職</label>
+      </div>
+      <%= f.text_area :position, class:"form-control input-default", id:"position", placeholder:"例) 〇〇課リーダー", maxlength:"100" %>
     </div>
 
     <div class="form-group">
