--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
       <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "#{current_user.name}さん", edit_user_registration_path, class: 'nav-link' %>
+            <%= link_to "#{current_user.name}さん", user_path(current_user.id), class: 'nav-link' %>
           </li>
           <li class="nav-item active">
             <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
