ユーザーマイページ実装・編集機能調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
  @import "shared/header.scss";
  @import "companies.scss";
  @import "user/registration.scss";
+ @import "users.scss";
  @import "reset.css";
 
 // ログイン画面
