--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -46,10 +46,10 @@
 
     <div class='form-group'>
       <div class='form-text-wrap'>
-        <label class="form-text">職業</label>
+        <label class="form-text">所属</label>
         <span class="indispensable">必須</span>
       </div>
-      <%= f.text_area :occupation, class:"form-control input-default", id:"occupation", placeholder:"例) 営業職", maxlength:"100" %>
+      <%= f.text_area :occupation, class:"form-control input-default", id:"occupation", placeholder:"例) 営業部第一課", maxlength:"100" %>
     </div>
 
     <div class='form-group'>
@@ -57,7 +57,7 @@
         <label class="form-text">役職</label>
         <span class="indispensable">必須</span>
       </div>
-      <%= f.text_area :position, class:"form-control input-default", id:"position", placeholder:"例) 〇〇課リーダー", maxlength:"100" %>
+      <%= f.text_area :position, class:"form-control input-default", id:"position", placeholder:"例) 課長", maxlength:"100" %>
     </div>
 
     <div class="form-group">
