--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,13 +30,6 @@
       <%= f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control'  %>
     </div>
 
-    <div class="form-group">
-      <%= f.label :current_password %>
-      <%= f.password_field :current_password, autocomplete: 'current-password', class: 'form-control' %>
-
-      <small class="form-text text-muted"><%= t('.we_need_your_current_password_to_confirm_your_changes') %></small>
-    </div>
-
     <div class='form-group'>
       <div class='form-text-wrap'>
         <label class="form-text">会社名</label>
@@ -46,16 +39,23 @@
 
     <div class='form-group'>
       <div class='form-text-wrap'>
-        <label class="form-text">職業</label>
+        <label class="form-text">所属</label>
       </div>
-      <%= f.text_area :occupation, class:"form-control input-default", id:"occupation", placeholder:"例) 営業職", maxlength:"100" %>
+      <%= f.text_area :occupation, class:"form-control input-default", id:"occupation", placeholder:"例) 営業部第一課", maxlength:"100" %>
     </div>
 
     <div class='form-group'>
       <div class='form-text-wrap'>
         <label class="form-text">役職</label>
       </div>
-      <%= f.text_area :position, class:"form-control input-default", id:"position", placeholder:"例) 〇〇課リーダー", maxlength:"100" %>
+      <%= f.text_area :position, class:"form-control input-default", id:"position", placeholder:"例) 課長", maxlength:"100" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :current_password %>
+      <%= f.password_field :current_password, autocomplete: 'current-password', class: 'form-control' %>
+
+      <small class="form-text text-muted"><%= t('.we_need_your_current_password_to_confirm_your_changes') %></small>
     </div>
 
     <div class="form-group">
@@ -65,7 +65,7 @@
 
   <hr class="devise-link my-5">
   <div class="form-group">
-    <%= link_to "トップページ", root_path, class: 'btn btn-info btn-block w-100 mb-4' %>
+    <%= link_to "マイページ", user_path(current_user.id), class: 'btn btn-info btn-block w-100 mb-4' %>
     <%= link_to t('.cancel_my_account'), registration_path(resource_name), data: {confirm: t('.are_you_sure')}, method: :delete, class: 'btn btn-danger btn-block w-100' %>
   </div>
 </div>
