トップページ編集

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -2,9 +2,9 @@
 <%= render "shared/header" %>
 
 <%# HOME %>
-<div class='main'>
-  <div class='title-contents'>
-    <h2>パートナー企業を探せるwebサイト</h2>
-    <p>そのプロダクト、きっと得意なパートナーが見つかる。</p>
-  </div><%# title-contents %>
-</div><%# /.main %>
+<div id="home" class='big-bg'>
+  <div class='home-content wrapper'>
+    <h2 class='page-title'>パートナー企業を探せるwebサイト</h2>
+    <p>そのプロダクト、得意なパートナーがきっと見つかる。</p>
+  </div><%# home-content %>
+</div><%# /#home %>
