--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <%= render "shared/header" %>
 <%= render 'shared/flash_messages' %>
 
-<%# BODY %>
+<%# MAIN %>
 <div class="main">
   <div class="inner">
     <div class="user__wrapper">
