--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,47 +3,54 @@
 <%= render 'shared/flash_messages' %>
 
 <%# MAIN %>
-<div class="main">
-  <div class="inner">
+<div class="user-contents">
+  <div class="user-box">
     <div class="user__wrapper">
       <h2 class="page-heading">
         <%= "#{@user.name}さんのページ" %>
       </h2>
-      <table class="table">
-        <tbody>
-          <tr>
-            <th class="table__col1">名前</th>
-            <td class="table__col2"><%= @user.name %></td>
-          </tr>
-          <tr>
-            <th class="table__col1">会社名</th>
-            <td class="table__col2"><%= @user.company %></td>
-          </tr>
-          <tr>
-            <th class="table__col1">所属</th>
-            <td class="table__col2"><%= @user.occupation %></td>
-          </tr>
-          <tr>
-            <th class="table__col1">役職</th>
-            <td class="table__col2"><%= @user.position %></td>
-          </tr>
-        </tbody>
-      </table>
-
-      <%# ログインしているユーザーとユーザー詳細ページのユーザーが同じであれば以下を表示する %>
-      <% if user_signed_in? && current_user.id == @user.id %>
-        <div class="user__manage">
-          <%= link_to "編集する", edit_user_registration_path(@user), class: 'btn btn-primary  btn-block' %>
-        </div>
-      <% end %>
-      <%# // ログインしているユーザーとユーザー詳細ページのユーザーが同じであれば上記を表示する %>
+      <div class="user__profile">
+        <table class="table">
+          <tbody>
+            <tr>
+              <th class="table__col1">名前</th>
+              <td class="table__col2"><%= @user.name %></td>
+            </tr>
+            <tr>
+              <th class="table__col1">会社名</th>
+              <td class="table__col2"><%= @user.company %></td>
+            </tr>
+            <tr>
+              <th class="table__col1">所属</th>
+              <td class="table__col2"><%= @user.occupation %></td>
+            </tr>
+            <tr>
+              <th class="table__col1">役職</th>
+              <td class="table__col2"><%= @user.position %></td>
+            </tr>
+          </tbody>
+        </table>
+        <%# ログインしているユーザーとユーザー詳細ページのユーザーが同じであれば以下を表示する %>
+        <% if user_signed_in? && current_user.id == @user.id %>
+          <div class="user__manage">
+            <%= link_to "編集する", edit_user_registration_path(@user), class: 'btn btn-primary  btn-block' %>
+          </div>
+        <% end %>
+        <%# // ログインしているユーザーとユーザー詳細ページのユーザーが同じであれば上記を表示する %>
+      </div>
 
       <h2 class="page-heading">
-        <%= "#{@user.name}さんが所属している会社"%>
+        <%= "#{@user.name}さんが登録した会社"%>
       </h2>
+      <div class="user__profile">
+        <div class="user__manage">
+            <%= link_to "新しく会社を登録する", new_company_path(@company), class: "new-company-btn btn btn-info btn-block" %>
+        </div>
+      </div>
       <div class="user__card">
-        <%# 部分テンプレートでそのユーザーが登録した会社一覧を表示する %>
-        <%#= render partial: "companies/company", collection: @company %>
+        <%# ユーザーが登録した会社一覧 %>
+        <%= render partial: "companies/company", collection: @company %>
+        <%# // ユーザーが登録した会社一覧 %>
       </div>
     </div>
   </div>
