--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -20,12 +20,12 @@
           </li>
         <% end %>
       </ul>
-      <form class="d-flex" action="#">
-        <input class='form-control me-2' placeholder='キーワードから探す'>
+      <%= search_form_for @p, url: companies_search_path, class: "d-flex" do |f| %>
+        <%= f.text_field :name_or_name_kana_or_profile_cont, placeholder: "キーワードから探す", class: "search-input form-control me-2" %>
         <button class="search-button">
           <%= image_tag "search.png", class:"search-icon" %>
         </button>
-      </form>
+      <% end %>
     </div>
   </nav>
 </header>
