--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -3,14 +3,14 @@
 <%# /HEADER %>
 
 <div class='chat-room-form'>
-  <h1>新規チャットルーム</h1>
+  <h1>お問い合わせ</h1>
   <%=form_with model: @room, local: true do |f|%>
     <div class='chat-room-form__field'>
       <div class='chat-room-form__field--left'>
-        <%= f.label :チャットルーム名, class: 'chat-room-form__label'%>
+        <%= f.label :件名, class: 'chat-room-form__label'%>
       </div>
       <div class='chat-room-form__field--right'>
-        <%= f.text_field :name, class: 'chat__room_name chat-room-form__input', placeholder: 'チャットルーム名を入力してください'%>
+        <%= f.text_field :title, class: 'chat__room_name chat-room-form__input', placeholder: '件名を入力してください'%>
       </div>
     </div>
     <div class='chat-room-form__field'>
