--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -2,31 +2,25 @@
 <%= render "shared/header" %>
 <%# /HEADER %>
 
-<div class='chat-room-form'>
+<div class='iquiry-room-form'>
   <h1>お問い合わせ</h1>
-  <%=form_with model: @room, local: true do |f|%>
-    <div class='chat-room-form__field'>
-      <div class='chat-room-form__field--left'>
-        <%= f.label :件名, class: 'chat-room-form__label'%>
+  <%=form_with model: @room, url: company_rooms_path, local: true do |f|%>
+    <div class='iqyiry-room-form__field'>
+      <div class='iquiry-room-form__field--left'>
+        <%= f.label :件名, class: 'iquiry-room-form__label'%>
       </div>
-      <div class='chat-room-form__field--right'>
-        <%= f.text_field :title, class: 'chat__room_name chat-room-form__input', placeholder: '件名を入力してください'%>
+      <div class='iquiry-room-form__field--right'>
+        <%= f.text_field :title, class: 'iquiry__room_name iquiry-room-form__input', placeholder: '件名を入力してください'%>
       </div>
     </div>
-    <div class='chat-room-form__field'>
-    </div>
-    <div class='chat-room-form__field'>
-      <div class='chat-room-form__field--left'>
-        <label class='chat-room-form__label' for='chat_room_チャットメンバー'>チャットメンバー</label>
+    <div class='iquiry-room-form__field'>
+      <div class='iquiry-room-form__field--left'>
+        <label class='iquiry-room-form__label' for='iquiry_room_to'>お問い合わせ先</label>
       </div>
-      <div class='chat-room-form__field--right'>
-        <select name="room[user_ids][]">
-          <option value="">チャットするユーザーを選択してください</option>
-          <% User.where.not(id: current_user.id).each do |user| %>
-            <option value=<%= user.id %>><%= user.name %></option>
-          <% end %>
-        </select>
-        <input name="room[user_ids][]" type="hidden" valu=<%= current_user.id %>>
+      <div class='iquiry-room-form__field--right'>
+        <%= "#{@company.name}担当者様" %>
+        <input name="room[user_ids][]" type="hidden" value=<%= @company.user.id %>>
+        <input name="room[user_ids][]" type="hidden" value=<%= current_user.id %>>
       </div>
     </div>
     <div class='chat-room-form__field'>
