最低限機能分のビュー調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,10 @@
   *= require_self
   */
 
+* {
+  box-sizing: border-box;
+}
+
  @import "bootstrap";
  @import "shared/header.scss";
  @import "companies/index.scss";
