--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,20 +1,16 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
 /* ユーザーページ */
 .user-contents {
   width: 100vw;
-  display: flex;
   flex-direction: column;
+  display: flex;
   align-items: center;
   padding: 5vh 0;
 }
 .user-box {
   width: 70vw;
   min-width: 1200px;
-  display: flex;
   flex-direction: column;
+  display: flex;
   align-items: center;
 }
 .user__wrapper{
@@ -23,7 +19,9 @@
 }
 
 .page-heading {
-  margin: 10px;
+  margin: 15px;
+  color: #524f4f;
+  text-shadow: 0 0 5px #ec782b;
 }
 .user__profile {
   display: flex;
@@ -55,4 +53,8 @@
 .user__manage {
   width: 50vw;
   margin: 0 0 32px 20px;
+}
+.user__card {
+  display: flex;
+  justify-content: center;
 }
