--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
 * {
   box-sizing: border-box;
 }
-
+ @import "bootstrap/scss/bootstrap";
  @import "bootstrap";
  @import "shared/header.scss";
  @import "companies/index.scss";
