--- a/app/views/iquiries/_iquiry.html.erb
+++ b/app/views/iquiries/_iquiry.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="iquiry-date">
       <!-- 投稿した時刻を出力する -->
-      <%= iquiry.created_at %>
+      <%= l iquiry.created_at %>
     </div>
   </div>
   <div class="lower-iquiry">
