空のメッセージが送信できないようにバリデーションの設定

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,8 @@
  @import "companies/new.scss";
  @import "user/registration.scss";
  @import "users.scss";
+ @import "rooms.scss";
+ @import "iquiries.scss";
  @import "reset.css";
 
 // ログイン画面
