--- a/app/views/iquiries/_main_iquiry.html.erb
+++ b/app/views/iquiries/_main_iquiry.html.erb
@@ -11,6 +11,6 @@
       <%= f.file_field :image, class: 'hidden' %>
     </label>
   </div>
-  <%= f.submit '送信', class: 'form-submit　btn btn-outline-primary' %>
+  <%= f.submit '送信', class: 'form-submit' %>
 <% end %>
 <%# // メッセージ入力フォーム %>
