--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -74,7 +74,7 @@
         </h2>
         <div class="user-rooms">
           <% if @user.rooms.present? %>
-            <%= render partial: "rooms/room", collection: @user.rooms %>
+            <%= render "rooms/room" %>
           <% else %>
             <p> お問い合わせはありません </p>
           <% end %>
