--- a/app/assets/stylesheets/iquiries.scss
+++ b/app/assets/stylesheets/iquiries.scss
@@ -58,7 +58,11 @@
   margin-bottom: 40px;
 }
 
-.form {
+.iquiry-image {
+  margin-bottom: 40px;
+}
+
+.iquiry-form {
   background-color: sandybrown;
   height: 90px;
   padding: 20px 40px;
