--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -39,6 +39,8 @@ h1 {
 }
 .iquiry-room-form__field {
   margin-top: 30px;
+  display: flex;
+  align-items: center;
 }
 .iquiry-room-form__field:after {
   content: "";
@@ -54,7 +56,11 @@ h1 {
 }
 .iquiry-room-form__field--right {
   float: right;
-  width: 70%;
+  width: 50%;
+  border-bottom: 1px solid lightgrey;
+}
+.iquiry-room-form__field--btn {
+  text-align: center;
 }
 
 .field_with_errors {
