--- a/app/assets/stylesheets/user/registration.scss
+++ b/app/assets/stylesheets/user/registration.scss
@@ -19,3 +19,15 @@
   font-size: 12px;
   font-weight: bold;
 }
+.u-registration-btn {
+  width: 100%;
+  margin-top: 10vh;
+}
+.u-update-btn {
+  width: 100%;
+  margin-top: 10vh;
+}
+.u-session-btn {
+  width: 100%;
+  margin-top: 10vh;
+}
