--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -52,7 +52,10 @@
 }
 .user__manage {
   width: 50vw;
-  margin: 0 0 32px 20px;
+  margin: 10px 0 32px;
+}
+.u-edit-btn {
+  width: 100%;
 }
 .user__card {
   display: flex;
