--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -15,9 +15,6 @@
       <%= search_form_for @p, url: companies_search_path do |f| %>
         <div class="search-top">
           <%= f.text_field :name_or_name_kana_or_profile_cont, placeholder: "キーワードから探す", class: "search-input form-control me-2" %>
-          <button class="search-button input-group-append">
-            <%= image_tag "search.png", class:"search-icon" %>
-          </button>
         </div>
         <div class="search-bottom">
           <div class="label-select">
@@ -27,6 +24,13 @@
           <div class="label-select">
             <%= f.label :industry_id_eq, '得意なプロダクト', class: 'select-label' %>
             <%= f.collection_select :industry_id_eq, Industry.where.not(id: 0), :id, :name, include_blank: '指定なし', class:"select-box" %>
+          </div>
+        </div>
+        <div class="btn-space">
+          <div class="top-search-btn">
+            <button class="search-button input-group-append">
+                <%= image_tag "search.png", class:"search-icon" %>
+            </button>
           </div>
         </div>
       <% end %>
@@ -50,27 +54,27 @@
     <%# 企業一覧を表示する部分テンプレート %>
     <div class="contents row">
       <% if @companies.present? %> 
+        <div class="company-card">
           <% @companies.each do |company| %>
-            <div class="company-card">
-              <ul class='company-lists'>
-                <li class='list'>
-                  <%= link_to company_path(company.id) do %>
-                  <div class="card" style="width: 18rem;">
-                    <%= image_tag company.image, class:"card-img-top" %>
-                    <div class="card-body">
-                      <h5 class="card-title"><%= company.name %></h5>
-                      <p class="card-text"><%= "業種：#{company.sector.name}" %><br>得意なプロダクト<br><%= company.industry.name %></p>
-                    </div>
+            <ul class='company-lists'>
+              <li class='list'>
+                <%= link_to company_path(company.id) do %>
+                <div class="card" style="width: 18rem;">
+                  <%= image_tag company.image, class:"card-img-top" %>
+                  <div class="card-body">
+                    <h5 class="card-title"><%= company.name %></h5>
+                    <p class="card-text"><%= "業種：#{company.sector.name}" %><br>得意なプロダクト<br><%= company.industry.name %></p>
                   </div>
-                  <% end %>
-                </li>
-              </ul>
-            </div>
+                </div>
+                <% end %>
+              </li>
+            </ul>
           <% end %>
+        </div>
       <% else %>
-            <div class="nil-company">
-              <p>登録されている会社はありません。</p>
-            </div>
+        <div class="nil-company">
+          <p>登録されている会社はありません。</p>
+        </div>
       <% end %>
     </div>
     <%# /企業一覧を表示する部分テンプレート %>
