--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -59,7 +59,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.submit t('.update'), class: 'btn btn-primary  btn-block' %>
+      <%= f.submit t('.update'), class: 'u-update-btn btn btn-primary  btn-block' %>
     </div>
   <% end %>
 
