--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -61,7 +61,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.submit t('.sign_up'), class: 'btn btn-primary btn-block' %>
+      <%= f.submit t('.sign_up'), class: 'u-registration-btn btn btn-primary btn-block' %>
     </div>
   <% end %>
 
