--- a/app/views/iquiries/_main_iquiry.html.erb
+++ b/app/views/iquiries/_main_iquiry.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <%# メッセージ入力フォーム %>
-<%= form_with model: [@room, @iquiry], class: 'form', local: true do |f| %>
+<%= form_with model: [@room, @iquiry], class: 'iquiry-form', local: true do |f| %>
   <div class="form-input">
     <%= f.text_field :message, class: 'form-message', placeholder: 'お問い合わせ内容を入力してください' %>
     <label class="form-image">
